--- a/assets/css/quizApp.css
+++ b/assets/css/quizApp.css
@@ -19,7 +19,6 @@ body{
 }
 
 .container{
-    margin-top: 224px;
     margin-inline: auto;
     width: 1160px;
     display: flex;
@@ -76,4 +75,50 @@ body{
     background-color: var(--pure-white);
     padding: 20px;
     border-radius: 24px;
+}
+
+/* Dark Mode Toggle */
+
+.toggle-container{
+    width: 1160px;
+    margin-inline: auto;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 100px;
+    margin-bottom: 124px;
+    justify-content: flex-end;
+}
+
+.toggle{
+    border-radius: 10px;
+    display: inline-block;
+    cursor: pointer;
+}
+.toggle-input{
+    display: none;
+}
+.toggle-fill{
+    position: relative;
+    width: 48px;
+    height: 28px;
+    border-radius: 20px;
+    background: rgba(167, 41, 245, 1);
+}
+
+.toggle-fill::after{
+    content: "";
+    position: absolute;
+    top: 15%;
+    left: 10%;
+    height: 20px;
+    width: 20px;
+    background: #ffff;
+    box-shadow: 0 0 10px rgba(0,0,0.25);
+    border-radius: 50%;
+    transition: transform .5s;
+}
+
+.toggle-input:checked ~ .toggle-fill::after{
+    transform: translateX(20px);
 }
