--- a/assets/css/quizApp.css
+++ b/assets/css/quizApp.css
@@ -3,6 +3,7 @@
     --gray-navy : rgba(98, 108, 127, 1);
     --pure-white : rgba(255, 255, 255, 1);
     --purple: rgba(167, 41, 245, 1);
+    --light-gray: rgba(244, 246, 250, 1);
 }
 
 *,*::after,*::before{
@@ -24,6 +25,7 @@ body{
     width: 1160px;
     display: flex;
     justify-content: space-between;
+    gap: 131px;
 }
 
 
@@ -40,7 +42,7 @@ body{
     flex-direction: column;
     line-height: 64px;
     color: var(--dark-navy);
-    font-size: 64px;
+    font-size: 60px;
     font-weight: 300;
 }
 
@@ -80,10 +82,15 @@ body{
     margin-inline: auto;
     display: flex;
     align-items: center;
-    gap: 20px;
     margin-top: 100px;
     margin-bottom: 124px;
     justify-content: space-between;
+}
+
+.toggle-container{
+    display: flex;
+    gap: 15px;
+    align-items: center;
 }
 
 .toggle{
@@ -133,4 +140,58 @@ body{
     font-size: 36px;
     line-height: 43.2px;
     color: var(--dark-navy);
+}
+
+.question-top{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.question-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.progress-bar{
+    width: 100%;
+    border-radius: 33.5px;
+    background:var(--pure-white);
+}
+
+.progress-inline{
+    height: 12px;
+    border-radius: 33.5px;
+    background: var(--purple);
+}
+
+.submit-btn{
+    border: none;
+    background-color: var(--purple);
+    color: white;
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 28px;
+    border-radius: 24px;
+    padding: 32px;
+    width: 100%;
+    cursor: pointer;
+    margin-top: 24px;
+}
+
+.option{
+    background-color: var(--light-gray);
+    width: 56px;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+}
+
+.subject-heading{
+    display: flex;
+    gap: 24px;
+    align-items: center;
 }
