--- a/assets/css/quizApp.css
+++ b/assets/css/quizApp.css
@@ -195,3 +195,14 @@ body{
     gap: 24px;
     align-items: center;
 }
+
+/* Selected Option Styling */
+
+.selected{
+    border: 3px solid var(--purple);
+
+    .option{
+        background-color: var(--purple);
+        color:#fff;
+    }
+}
