--- a/assets/css/quizApp.css
+++ b/assets/css/quizApp.css
@@ -32,8 +32,6 @@ body{
     margin-bottom: 200px;
 }
 
-
-
 /* Container Left Side */
 .container-leftside{
     display: flex;
@@ -201,6 +199,11 @@ body{
     align-items: center;
 }
 
+.router{
+    border: 3px solid transparent;
+    transition: border .3s ease;
+}
+
 /* Selected Option Styling */
 
 .selected{
@@ -268,6 +271,9 @@ body{
 }
 
 /* Hover Effects */
+.router:hover{
+    border: 3px solid var(--purple);
+}
 .option{
     transition: all .2s ease;
 }
